# DeepSearch-POUQ

./: .gitignore  CMakeLists.txt  README.md  build.sh  format.sh  test.sh
.github/workflows/: ci.yml
python_bindings/: bindings.cpp  setup.py
src/: allocator.h  common.h  main.cpp  memory.h  neighbor.cpp  neighbor.h  searcher.h  utils.h
src/core/: CMakeLists.txt  config.cpp  config.h  exceptions.h  factory.h  interfaces.h  memory_manager.h
src/distance/: CMakeLists.txt  computers.cpp  computers.h
src/graph/: CMakeLists.txt  HnswInitializer.h  builder.h  builder_factory.cpp  builder_factory.h  graph.cpp  graph.h  hnsw_builder.cpp
src/hnsw/: CMakeLists.txt  HnswInitializer.h  builder.h  graph.h  hnsw.cpp  hnsw.h
src/hnswlib/: hnswalg.h  hnswlib.h  space_l2.h
src/quantization/: CMakeLists.txt  fp32_quant.cpp  fp32_quant.h  quantizer.h  quantizer_factory.cpp  sq4_quant.cpp  sq4_quant.h  sq8_quant.cpp  sq8_quant.h
src/searcher/: CMakeLists.txt  searcher.cpp  searcher.h  searcher_impl.h
src/simd/: CMakeLists.txt  avx2.h  avx512.h  distance.h  distance_functions.cpp  distance_functions.h  simd_utils.cpp  simd_utils.h
tests/: CMakeLists.txt  test_main_flow_integration.cpp  test_precision_integration.cpp
tests/unit/core/: test_config.cpp  test_exceptions.cpp  test_interfaces.cpp  test_memory_manager.cpp
tests/unit/distance/: test_distance_computers.cpp
tests/unit/quantization/: test_quantizers.cpp
tests/unit/searcher/: test_searcher.cpp
tests/unit/simd/: test_distance_functions.cpp  test_simd_benchmark.cpp  test_simd_utils.cpp
